Módulo de vendas (PDV)
Signed-off-by: Erinaldo Henrique <hencomjesus@hotmail.com>